[package]
name = "rechat2srt"
version = "0.2.0"
edition = "2018"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
license = "MIT"
repository = "https://github.com/vi/rechat2srt"
description = "Command-line tool to convert Twitch's *.rechat.json files to srt subtitles."
keywords = ["cli", "subtitles", "rechat", "twitch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
argh = "0.1.4"
chrono = "0.4.19"
miniserde = "0.1.13"
srtlib = "0.1.0"
